--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 colored==1.4.2 # Avoid updating to 1.4.3 to avoid issues where coloring doesnt work properly.
 pygame==2.1.0
 prettytable~=2.4.0
+Pillow==8.4.0
+setuptools==59.6.0
